Update a lot of things

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,25 +52,25 @@
       <div id="footer">
         <ul id="social">
           <li>
-            <a href="http://github.com/robotlolita"
+            <a href="http://github.com/di3goleite"
                title="Mad-science experiments @ Github">
               <i class="entypo-social-github"></i>
             </a>
           </li>
           <li>
-            <a href="http://twitter.com/robotlolita"
+            <a href="http://twitter.com/di3goleite"
                title="Keep up with the things I do over Twitter">
               <i class="entypo-social-twitter"></i>
             </a>
           </li>
           <li>
-            <a href="http://facebook.com/robotlolita"
+            <a href="http://facebook.com/di3goleite"
                title="My art/writing/gamedev fanpage on Facebook">
               <i class="entypo-social-facebook"></i>
             </a>
           </li>
           <li>
-            <a href="http://www.last.fm/user/killdream"
+            <a href="http://www.last.fm/user/di3goleite"
                title="The stuff I listen to any day erry day">
               <i class="entypo-social-lastfm"></i>
             </a>
