--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }} - Quils in Space</title>
+        <title>{{ page.title }} - x divided by zero</title>
         <meta name="viewport" content="width=device-width">
 
         <meta name="description"
@@ -14,7 +14,7 @@
 
         <link href="/atom.xml"
               rel="alternate"
-              title="Quils in Space"
+              title="x divided by zero"
               type="application/atom+xml" />
 
         <link href='http://fonts.googleapis.com/css?family=Lora:400,400italic,700,700italic|PT+Sans+Caption:700,400|Source+Sans+Pro:400|Raleway:300' rel='stylesheet' type='text/css'>
