--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,3 +9,19 @@ layout: default
 <div id="post" class="textual-content">
   {{ content }}
 </div>
+
+{% if site.comments %}
+<div id="disqus_thread"></div>
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+	var d = document, s = d.createElement('script');
+
+	s.src = '//xdividedbyzero.disqus.com/embed.js';
+
+	s.setAttribute('data-timestamp', +new Date());
+	(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript></noscript>
+</script>
+{% endif %}
