Fix atom title and lastfm link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,7 @@
             </a>
           </li>
           <li>
-            <a href="http://www.last.fm/user/di3goleite"
+            <a href="http://last.fm/user/di3goleite"
                title="The stuff I listen to any day erry day">
               <i class="entypo-social-lastfm"></i>
             </a>
